--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -37,7 +37,7 @@
     <div class="col-12">
         <p class="text-right">Copyright 2020 The Video Catalog Company 
         
-        - Designed by <a href="https://templatemo.com" rel="nofollow" target="_parent">TemplateMo</a></p>
+        - Designed by <a href="/https://templatemo.com" rel="nofollow" target="_parent">TemplateMo</a></p>
     </div>
 </footer>
 </div> <!-- tm-content-container -->
@@ -45,6 +45,6 @@
 
 </div> <!-- .tm-page-wrap -->
 
-<script src="js/jquery-3.4.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="/js/jquery-3.4.1.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 <script>
