--- a/views/add.ejs
+++ b/views/add.ejs
@@ -36,7 +36,7 @@
             <div class="mx-auto pb-3 tm-about-text-container">
               <div class="row">
                 <div class="col-lg-12 mb-5">
-                  <form method="POST" action="/photos" class="tm-contact-form">
+                  <form method="POST" action="/photos" class="tm-contact-form" encType="multipart/form-data">
                     <div class="form-group">
                       <input type="text" name="title" class="form-control rounded-0" placeholder="Photo Title" required>
                     </div>
@@ -45,7 +45,7 @@
                         placeholder="Photo Description" required></textarea>
                     </div>
                     <div class="from-group">
-                      <input type="file" name="image" class="form-control-file rounded-0">
+                      <input type="file" name="image" class="form-control-file rounded-0" required>
                     </div>
                     <div class="form-group mb-0">
                       <button type="submit"
