--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -37,10 +37,13 @@
 							<!-- Share box -->
 							<div class="tm-bg-gray tm-share-box">
 								<div class="text-center">
-									<button class="btn btn-primary p-0 mb-4 tm-btn-animate tm-btn-download tm-icon-download"><span>Update Details</span></button>	
+									<a href="/photos/edit/<%= photo._id %>">
+									<button  class="btn btn-primary p-0 mb-4 tm-btn-animate tm-btn-download tm-icon-download"><span>Update Details</span></button>	
+								</a>
 								</div>	
 								<div class="text-center">
-									<button class="btn btn-danger p-0 tm-btn-animate tm-btn-download tm-icon-download"><span>Delete Photo</span></button>	
+									<a href="/photos/<%= photo._id %>?_method=DELETE"><button class="btn btn-danger p-0 tm-btn-animate tm-btn-download tm-icon-download"
+										onclick="return confirm('ARE YOU SURE?')"><span>Delete Photo</span></button></a>
 								</div>								
 							</div>
 						</div>
