--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,10 +17,7 @@
             </div>
 
             <div id="tm-video-container">
-                <video autoplay muted loop id="tm-video">
-                    <!-- <source src="video/sunset-timelapse-video.mp4" type="video/mp4"> -->
-                        <source src="video/waterfall.mp4" type="video/mp4">
-                </video>    
+                <img src="img/camera_unsplash.jpg">   
             </div>
             
             <i id="tm-video-control-button" class="fas fa-plus"></i>
